--- a/views/landingPage/section3/section3.module.css
+++ b/views/landingPage/section3/section3.module.css
@@ -1,3 +1,209 @@
 .container{
     padding: 80px 0 70px;
 }
+
+.tabsContainer{
+    margin: auto;
+    margin-top: 30px;
+    width: 441px;
+}
+
+.tabContainer{
+    /* Primary/Blue */
+    
+    border-radius: 4px;
+    padding: 4px 10px;
+}
+
+.tabContainerActive{
+    border: 1px solid #03254C;
+}
+
+.tabText{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+
+    /* identical to box height, or 143% */
+
+    /* Primary/Blue */
+    color: #03254C;
+}
+
+
+
+.leftTitle{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 18px;
+
+    /* identical to box height, or 75% */
+
+    /* Primary/Blue */
+    color: #03254C;
+
+    margin-bottom: 28px;
+}
+
+
+.leftSubText{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+
+    /* identical to box height, or 125% */
+    text-transform: capitalize;
+
+    /* Secondory/Gray */
+    color: #393E45;
+
+    margin-bottom: 14px;
+}
+
+.leftText{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+
+    /* or 157% */
+
+    /* Secondory/Gray */
+    color: #393E45;
+}
+
+.leftBox{
+    padding: 30px;
+    border-bottom: 1px solid #DFDFDF;
+}
+
+
+.card{
+    width: 330px;
+    height: 430px;
+    position: relative;
+    margin-left: 30px;
+}
+.card:first-child{
+    margin-left: 0;
+}
+
+.coming{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 29px;
+
+    /* identical to box height, or 207% */
+
+    /* Primary/White */
+    color: #FFFFFF;
+    opacity: 0.9;
+    background: linear-gradient(180deg, #D1AB49 0%, #D19C15 100%);
+    border-radius: 6px;
+    padding: 2px 10px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+
+.cardInfo{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+
+    /* Primary/White */
+    color: #FFFFFF;
+    position: absolute;
+    bottom: 30px;
+    left: 20px;
+}
+
+.book{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 29px;
+
+    /* identical to box height, or 181% */
+
+    color: #FFFFFF;
+
+    opacity: 0.9;
+
+    padding: 6px 30px;
+    border-radius: 6px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    border: 2px solid #D1AB49;
+}
+
+.rightContainer{
+    margin-left: 30px;
+}
+
+.rightContainer:first-child{
+    margin-left: 0px;
+}
+
+
+.guestText{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+
+    /* identical to box height */
+
+    /* Secondory/Gray */
+    color: #393E45;
+
+    margin-top: 20px;
+    margin-bottom: 6px;
+}
+
+
+
+.guestLabel{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+
+    /* identical to box height */
+
+    color: #FFFFFF;
+    padding: 2px 7px;
+    border-radius: 20px;
+    width: fit-content;
+    margin-top: -10px;
+    position: relative;
+}
+
+.guestContainer > div{
+    margin-left: 20px;
+}
+.guestContainer > div:first-child{
+    margin-left: 0px;
+}
+
+
+.firstLeftBox{
+    background: linear-gradient(180deg, rgba(209, 171, 73, 0.1) 0%, rgba(209, 156, 21, 0.1) 100%);
+    border-radius: 12px 12px 0px 0px;
+}
