--- a/views/landingPage/section2/section2.module.css
+++ b/views/landingPage/section2/section2.module.css
@@ -4,8 +4,8 @@
 }
 
 .innerContainer{
-    background: linear-gradient(109.46deg, rgba(201, 201, 201, 0.4) 1.57%, rgba(196, 196, 196, 0.05) 100%);
-    opacity: 0.5;
+    background: linear-gradient(109.46deg, rgba(201, 201, 201, 0.2) 1.57%, rgba(196, 196, 196, 0.025) 100%);
+    /* opacity: 0.5; */
     backdrop-filter: blur(30px);
 
     /* Note: backdrop-filter has minimal browser support */
