--- a/views/landingPage/section1/section1.module.css
+++ b/views/landingPage/section1/section1.module.css
@@ -7,7 +7,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 56px;
+    font-size: 3.5rem;
     line-height: 60px;
 
     /* identical to box height, or 107% */
@@ -22,7 +22,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 38px;
 
     /* identical to box height, or 158% */
@@ -37,7 +37,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 29px;
 
     /* or 161% */
@@ -49,7 +49,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 28px;
 
     /* or 140% */
