--- a/views/landingPage/section2/section2.module.css
+++ b/views/landingPage/section2/section2.module.css
@@ -21,7 +21,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 36px;
 
     /* or 180% */
