--- a/views/landingPage/section3/section3.module.css
+++ b/views/landingPage/section3/section3.module.css
@@ -23,7 +23,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 20px;
 
     /* identical to box height, or 143% */
@@ -38,7 +38,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 18px;
 
     /* identical to box height, or 75% */
@@ -54,7 +54,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 20px;
 
     /* identical to box height, or 125% */
@@ -70,7 +70,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 22px;
 
     /* or 157% */
@@ -108,7 +108,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 29px;
 
     /* identical to box height, or 207% */
@@ -129,7 +129,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 21px;
 
     /* Primary/White */
@@ -143,7 +143,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 29px;
 
     /* identical to box height, or 181% */
@@ -173,7 +173,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 17px;
 
     /* identical to box height */
@@ -191,7 +191,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 17px;
 
     /* identical to box height */
@@ -221,7 +221,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 28px;
 
     color: #FFFFFF;
