--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -25,7 +25,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
-    font-size: 46px;
+    font-size: 2.875rem;
     line-height: 68px;
 
     /* identical to box height, or 148% */
@@ -38,7 +38,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 24px;
 
     /* identical to box height */
@@ -61,7 +61,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 20px;
 
     /* identical to box height, or 125% */
