--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -9,7 +9,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 22px;
 
     /* identical to box height, or 157% */
