--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -6,7 +6,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 17px;
 
     /* identical to box height */
