--- a/views/landingPage/section10/section10.module.css
+++ b/views/landingPage/section10/section10.module.css
@@ -7,7 +7,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
+    font-size: 2rem;
     line-height: 38px;
 
     /* identical to box height */
@@ -24,7 +24,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 19px;
 
     /* identical to box height */
@@ -37,7 +37,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 19px;
 
     /* identical to box height */
