--- a/views/landingPage/section4/section4.module.css
+++ b/views/landingPage/section4/section4.module.css
@@ -7,7 +7,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 32px;
 
     /* or 160% */
