--- a/views/landingPage/section5/section5.module.css
+++ b/views/landingPage/section5/section5.module.css
@@ -8,7 +8,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 500;
-    font-size: 46px;
+    font-size: 2.875rem;
     line-height: 56px;
 
     /* or 122% */
@@ -24,7 +24,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 28px;
 
     /* or 156% */
@@ -37,7 +37,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 29px;
 
     margin-left: 15px;
