--- a/views/landingPage/section6/section6.module.css
+++ b/views/landingPage/section6/section6.module.css
@@ -8,7 +8,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 24px;
     color: #d1a22a;
     padding: 10px;
@@ -21,7 +21,7 @@
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 500;
-    font-size: 46px;
+    font-size: 2.875rem;
     line-height: 55px;
     
     /* Primary/Blue */
@@ -34,7 +34,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 32px;
 
     /* or 160% */
@@ -49,7 +49,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 30px;
 
     /* or 167% */
