--- a/views/landingPage/section8/section8.module.css
+++ b/views/landingPage/section8/section8.module.css
@@ -17,7 +17,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 32px;
 
     /* or 160% */
