--- a/views/landingPage/section9/section9.module.css
+++ b/views/landingPage/section9/section9.module.css
@@ -19,7 +19,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 32px;
 
     /* or 133% */
@@ -34,7 +34,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 22px;
 
     /* identical to box height, or 110% */
@@ -68,7 +68,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    font-size: 40px;
+    font-size: 2.5rem;
     line-height: 50px;
 
     /* or 125% */
@@ -84,7 +84,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 22px;
 
     /* identical to box height, or 110% */
