--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -17,3 +17,11 @@
 
     color: #FFFFFF;
 }
+
+@media (max-width: 480px) {
+    .imm{
+        margin-left: auto !important;
+        margin-right: auto !important;
+        width: fit-content;
+    }
+}
