--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -77,3 +77,11 @@
 
     cursor: pointer;
 }
+
+@media (max-width: 480px) {
+    .box{
+        padding: 10px;
+        width: 100vw;
+        height: 100vh;
+    }
+}
