--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -27,3 +27,42 @@
     opacity: 1;
     font-weight: 500;
 }
+
+.logoConMM{
+    width: 223px;
+    height: 45px;
+    position: relative;
+}
+
+.mobMenu{
+    position: fixed;
+    width: 150px;
+    height: 100vh;
+    top: 0;
+    display: none;
+    transition: all 0.3s linear;
+    background: rgba(30,36,51,.4);
+    box-shadow: inset 0 1px 4px hsl(0deg 0% 100% / 25%);
+    /* backdrop-filter: blur(15px); */
+    z-index: 1000;
+    backdrop-filter: blur(8px);
+}
+
+@media (max-width: 480px) {
+    .logoConMM {
+        width: 100px;
+        height: 20px;
+        margin: 10px 0 10px;
+    }
+
+    .mobMenu{
+        display: block;
+    }
+
+    .menu{
+        display: none !important;
+    }
+    .label{
+        width: fit-content;
+    }
+}
