--- a/views/landingPage/section1/section1.module.css
+++ b/views/landingPage/section1/section1.module.css
@@ -57,3 +57,39 @@
     /* Secondory/Gray */
     color: #393E45;
 }
+
+.pre1{
+    width: 464px;
+}
+
+.pre2{
+    width: 556px;
+}
+
+.areyou{
+    width: 395px;
+    height: 35px;
+    position: relative;
+}
+
+
+
+@media (max-width: 480px) {
+    .pre1{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .pre2{
+        width: 100%;
+    }
+
+    .container{
+        flex-wrap: wrap;
+        margin-top: 20px;
+    }
+
+    .areyou{
+        width: 300px;
+        height: 28px;
+    }
+}
