--- a/views/landingPage/section10/section10.module.css
+++ b/views/landingPage/section10/section10.module.css
@@ -51,3 +51,15 @@
     background: #FFFFFF;
     border-radius: 4px;
 }
+
+@media (max-width: 480px) {
+    .container{
+        padding: 20px;
+        text-align: center;
+    }
+    .join{
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
