--- a/views/landingPage/section2/section2.module.css
+++ b/views/landingPage/section2/section2.module.css
@@ -39,3 +39,26 @@
     position: relative;
     width: fit-content;
 }
+
+.buildingCon{
+    width:1200px;
+    height:480px;
+    position: relative;
+
+}
+
+@media (max-width: 480px) {
+    .buildingCon{
+        width: auto;
+        height: 160px;
+        margin: auto;
+
+    }
+
+    .innerContainer{
+        width: fit-content;
+    }
+    .text{
+        line-height: 20px;
+    }
+}
