--- a/views/landingPage/section4/section4.module.css
+++ b/views/landingPage/section4/section4.module.css
@@ -17,3 +17,37 @@
     width: 731px;
 
 }
+
+.titleImage{
+    width : 731px;
+    height : 50px;
+    position: relative;
+}
+
+.commaImage{
+    width: 174px;
+    height: 174px;
+    position: relative;
+}
+
+@media (max-width: 480px) {
+    .text{
+        padding: 0 10px;
+        width: fit-content;
+        line-height: 18px;
+    }
+
+    .titleImage{
+        margin: 0 10px;
+        width : 304.58333333333337px;
+        height : 20.833333333333336px;
+        position: relative;
+    }
+    
+    .commaImage{
+        display: none;
+        width: 43.5px;
+        height: 43.5px;
+        position: relative;
+    }
+}
