--- a/views/landingPage/section6/section6.module.css
+++ b/views/landingPage/section6/section6.module.css
@@ -59,3 +59,18 @@
     margin: 0;
     padding: 0;
 }
+
+.imgCont{
+    width: 400px; 
+    height: 570px;
+    position: relative;
+}
+
+@media (max-width: 480px) {
+    .points{
+        line-height: 24px;
+        padding: 0 10px;
+        margin-top: -20px;
+        margin-bottom: 10px;
+    }
+}
