--- a/views/landingPage/section8/section8.module.css
+++ b/views/landingPage/section8/section8.module.css
@@ -27,3 +27,21 @@
 
 
 }
+
+.imgCon{
+    width: 280px;
+    height: 280px;
+    position: relative;
+}
+
+@media (max-width: 480px) {
+    .card{
+        padding: 10px;
+    }
+    .imgCon{
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        margin-top: -30px !important;
+    }
+}
