--- a/views/landingPage/section9/section9.module.css
+++ b/views/landingPage/section9/section9.module.css
@@ -99,3 +99,22 @@
     margin: auto;
 
 }
+
+@media (max-width: 480px) {
+    .rightContainer{
+        position: relative;
+        width: fit-content;
+        /* margin: auto; */
+        margin-top: 100px;
+        right: unset;
+        top: unset;
+    }
+    .innerContainer{
+        padding: 0px;
+        /* margin: auto; */
+    }
+    .ttop{
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
