--- a/views/landingPage/section8/section8.module.css
+++ b/views/landingPage/section8/section8.module.css
@@ -31,8 +31,13 @@
 .imgCon{
     width: 280px;
     height: 280px;
-    position: relative;
+    position: absolute;
 }
+
+.cardRight{
+    margin-left: 320px;
+}
+
 
 @media (max-width: 480px) {
     .card{
@@ -43,5 +48,8 @@
         height: 50px;
         position: absolute;
         margin-top: -30px !important;
+    }
+    .cardRight{
+        margin-left: 50px;
     }
 }
