--- a/views/landingPage/section10/section10.module.css
+++ b/views/landingPage/section10/section10.module.css
@@ -54,7 +54,7 @@
 
 @media (max-width: 480px) {
     .container{
-        padding: 20px;
+        padding: 10px 5px;
         text-align: center;
     }
     .join{
