--- a/views/landingPage/section2/section2.module.css
+++ b/views/landingPage/section2/section2.module.css
@@ -28,7 +28,7 @@
     text-align: center;
 
     /* Primary/White */
-    color: #FFFFFF;
+    color: #393E45;
     /* opacity: 1 !important; */
 }
 
