--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -2,7 +2,7 @@
     background-color: #051C2C;
     padding: 20px 0 10px;
     margin-top: 80px;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .text{
