--- a/views/landingPage/section1/section1.module.css
+++ b/views/landingPage/section1/section1.module.css
@@ -72,6 +72,16 @@
     position: relative;
 }
 
+.solo{
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.08189375rem;
+    line-height: 34px !important;
+    color: #393E45;
+    margin-bottom: 30px;
+}
+
 
 
 @media (max-width: 480px) {
