--- a/views/landingPage/section3/section3.module.css
+++ b/views/landingPage/section3/section3.module.css
@@ -14,6 +14,7 @@
     
     border-radius: 4px;
     padding: 4px 10px;
+    cursor: pointer;
 }
 
 .tabContainerActive{
@@ -32,6 +33,17 @@
     /* Primary/Blue */
     color: #03254C;
 }
+
+.single{
+    margin-right: 16px;
+    margin-top: 25px;
+}
+
+
+.bndeCon{
+    min-width: 730px;
+}
+
 
 
 
@@ -82,6 +94,7 @@
 
 .leftBox{
     padding: 30px;
+    cursor: pointer;
     border-bottom: 2px solid #DFDFDF;
 }
 
@@ -216,6 +229,8 @@
 .firstLeftBox{
     background: linear-gradient(180deg, rgba(209, 171, 73, 0.1) 0%, rgba(209, 156, 21, 0.1) 100%);
     border-radius: 12px 12px 0px 0px;
+    border-bottom: 2px solid #f2e3be;
+    position: relative;
 }
 
 .plus{
@@ -232,7 +247,52 @@
 
 }
 
+.hotelsCon{
+    margin-left: 30px;
+}
+
+.our{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 2.875rem;
+    line-height: 54px;
+}
+
+.name{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.375rem;
+    line-height: 24px;
+    color: #03254C;
+    margin-top: 30px;
+    margin-bottom: 12px;
+}
+
+
+
+.labe{
+    font-weight: 700;
+    font-size: 0.875rem;
+    line-height: 20px;
+    color: #393E45;
+    margin-left: 10px;
+}
+
+.labeCon{
+    
+    margin-bottom: 10px;
+}
+
 @media (max-width: 480px) {
+    .hotelsCon{
+        margin-left: auto;
+        margin-right: auto;
+        width: fit-content;
+    }
+    .mobHotelsCon{
+        display: unset;
+    }
     .tabsContainer{
         width: fit-content;
     }
@@ -243,6 +303,20 @@
         margin-left: auto;
         margin-right: auto;
         margin-top: 10px;
+        width: -webkit-fill-available;
+        width: -moz-available;
+    }
+
+    .single{
+        margin-right: auto;
+        width: fit-content;
+        margin-left: auto;
+    }
+
+    .bndeCon{
+        min-width: unset;
+        width: fit-content;
+        margin: auto;
     }
     /* .guestContainer > div{
         margin-left: 0px;
