--- a/views/landingPage/section5/section5.module.css
+++ b/views/landingPage/section5/section5.module.css
@@ -67,6 +67,16 @@
     position: relative;
 }
 
+.title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.875rem;
+    line-height: 54px;
+
+
+}
+
 
 @media (max-width: 480px) {
     .titleImage{
