--- a/views/landingPage/section8/section8.module.css
+++ b/views/landingPage/section8/section8.module.css
@@ -38,6 +38,14 @@
     margin-left: 320px;
 }
 
+.title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.875rem;
+    line-height: 54px;
+}
+
 
 @media (max-width: 480px) {
     .card{
