--- a/views/landingPage/section9/section9.module.css
+++ b/views/landingPage/section9/section9.module.css
@@ -31,6 +31,7 @@
 }
 
 .connect{
+    cursor: pointer;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
@@ -97,7 +98,12 @@
     border-radius: 8px;
     width: fit-content;
     margin: auto;
+    cursor: pointer;
 
+}
+
+.ttop{
+    width: 376px;
 }
 
 @media (max-width: 480px) {
@@ -108,6 +114,8 @@
         margin-top: 100px;
         right: unset;
         top: unset;
+        padding: 10px;
+        height: fit-content;
     }
     .innerContainer{
         padding: 0px;
@@ -116,5 +124,6 @@
     .ttop{
         margin-left: auto;
         margin-right: auto;
+        width: fit-content;
     }
 }
