--- a/views/landingPage/section3/section3.module.css
+++ b/views/landingPage/section3/section3.module.css
@@ -300,11 +300,11 @@
         width: fit-content;
     }
     .card{
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: auto !important;
+        margin-right: auto !important;
         margin-top: 10px;
-        width: -webkit-fill-available;
-        width: -moz-available;
+        width: 69vw;
+        height: 90vw;
     }
 
     .single{
