--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   scroll-behavior: smooth;
 }
 
@@ -115,7 +115,7 @@ p{margin: 0;}
 
 @media (max-width: 480px) {
   :root {
-    font-size: 10px;
+    font-size: 12px;
   }
   .show_in_mobile{
     display: block;
