--- a/views/landingPage/section10/section10.module.css
+++ b/views/landingPage/section10/section10.module.css
@@ -61,5 +61,7 @@
         width: fit-content;
         margin-left: auto;
         margin-right: auto;
+        padding: 10px;
+        margin-top: 10px;
     }
 }
