--- a/views/landingPage/section5/section5.module.css
+++ b/views/landingPage/section5/section5.module.css
@@ -47,7 +47,7 @@
     /* Primary/White */
     color: #FFFFFF;
 
-    /* margin-top: 65.5px; */
+    margin-top: 65.5px;
     margin-bottom: 10px;
 }
 
