--- a/views/landingPage/section6/section6.module.css
+++ b/views/landingPage/section6/section6.module.css
@@ -75,9 +75,12 @@
 }
 
 @media (max-width: 480px) {
+    .text{
+        margin-top: 15px;
+    }
     .imgCont{
-        width: 63vw; 
-        height: 90vw;
+        width: 100vw; 
+        height: 142.85714285714286vw;
         position: relative;
         margin-left: auto;
         margin-right: auto;
