--- a/views/landingPage/section3/section3.module.css
+++ b/views/landingPage/section3/section3.module.css
@@ -318,6 +318,10 @@
         width: fit-content;
         margin: auto;
     }
+
+    .leftTitle{
+        margin-bottom: 10px;
+    }
     /* .guestContainer > div{
         margin-left: 0px;
         margin-top: 30px;
