--- a/views/landingPage/section1/section1.module.css
+++ b/views/landingPage/section1/section1.module.css
@@ -102,4 +102,12 @@
         width: 300px;
         height: 28px;
     }
+
+    .text{
+        margin-top: -15px;
+    }
+
+    .rightText{
+        margin-top: -20px;
+    }
 }
