--- a/views/landingPage/section4/section4.module.css
+++ b/views/landingPage/section4/section4.module.css
@@ -40,20 +40,21 @@
 
 @media (max-width: 480px) {
     .text{
-        padding: 0 10px;
+        padding: 0 20px;
         width: fit-content;
         line-height: 18px;
     }
 
     .titleImage{
-        margin: 0 10px;
+        margin: 0 20px;
         width : 304.58333333333337px;
         height : 20.833333333333336px;
         position: relative;
     }
     
     .title{
-        padding: 0 10px;
+        padding: 0 20px;
+        margin-bottom: 10px !important;
     }
 
     .commaImage{
