--- a/views/landingPage/section6/section6.module.css
+++ b/views/landingPage/section6/section6.module.css
@@ -69,22 +69,30 @@
 }
 
 .imgCont{
-    width: 400px; 
-    height: 570px;
+    width: 450px; 
+    height: 300px;
     position: relative;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 @media (max-width: 480px) {
+
+    .point{
+        width: auto !important;
+    }
     .text{
         margin-top: 15px;
     }
     .imgCont{
         width: 100vw; 
-        height: 142.85714285714286vw;
-        position: relative;
-        margin-left: auto;
-        margin-right: auto;
+        height: 66.66666666666667vw;
+        /* margin-left: auto;
+        margin-right: auto; */
         margin-bottom: 60px;
+        border-radius: 0;
+        /* margin-left: -20px; */
+        /* margin-right: unset !important; */
     }
 
     .points{
@@ -92,5 +100,8 @@
         padding: 0 10px;
         margin-top: -20px;
         margin-bottom: 10px;
+    }
+    .yellowBox{
+        margin-top: 20px !important;
     }
 }
