--- a/views/landingPage/section7/section7.module.css
+++ b/views/landingPage/section7/section7.module.css
@@ -1,9 +1,13 @@
-.container{
+.container, .mobContainer{
     position: relative;
     padding: 80px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.mobContainer{
+    display: none;
 }
 
 .mapCon{
@@ -12,9 +16,16 @@
     position: relative;
 }
 @media (max-width: 480px) {
+    .container{
+        display: none;
+    }
+
+    .mobContainer{
+        display: block;
+    }
     .mapCon{
         margin-top: -160px;
-        width: 90vw;
-        height: 43vw;
+        width: 100vw;
+        height: 47.77777777777778vw;
     }
 }
