--- a/views/landingPage/section9/section9.module.css
+++ b/views/landingPage/section9/section9.module.css
@@ -7,10 +7,17 @@
     width: 100%;
 }
 
+.container *{
+    transition: background 0.3s linear;
+    /* transition: width 0.3s linear; */
+    /* transition: height 0.3s linear; */
+}
+
 .innerContainer{
-    background: rgba(243, 243, 243, 0.4);
+    background: rgba(243, 243, 243, 1);
     border-radius: 12px;
-    width: 100%;
+    width: 500px;
+    height: 440px;
     padding: 69px 112px;
     position: relative;
 }
@@ -60,9 +67,9 @@
     border-radius: 12px;
     padding: 60px;
 
-    position: absolute;
-    right: 50px;
-    top: -33px;
+    /* position: absolute; */
+    /* right: 50px;
+    top: -33px; */
 }
 
 .rightText{
@@ -102,28 +109,35 @@
 
 }
 
-.ttop{
+/* .ttop{
     width: 376px;
-}
+} */
 
 @media (max-width: 480px) {
     .rightContainer{
         position: relative;
         width: fit-content;
         /* margin: auto; */
-        margin-top: 100px;
+        /* margin-top: 100px; */
         right: unset;
         top: unset;
         padding: 10px;
         height: fit-content;
     }
+
     .innerContainer{
-        padding: 0px;
+        padding: 10px;
+        height: fit-content;
+        width: fit-content;
         /* margin: auto; */
     }
     .ttop{
         margin-left: auto;
         margin-right: auto;
         width: fit-content;
+    }
+
+    .container{
+        flex-wrap: wrap;
     }
 }
