--- a/views/landingPage/section7/section7.module.css
+++ b/views/landingPage/section7/section7.module.css
@@ -15,6 +15,21 @@
     height: 582px;
     position: relative;
 }
+
+
+.marker{
+    animation-name: marker;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+}
+
+@keyframes marker {
+    0% {transform: translate(0, 0);}
+    50% {transform: translate(0, -10px);}
+    100% {transform: translate(0, 0);}
+}
+
 @media (max-width: 480px) {
     .container{
         display: none;
