--- a/views/landingPage/section2/section2.module.css
+++ b/views/landingPage/section2/section2.module.css
@@ -23,6 +23,7 @@
     font-weight: 400;
     font-size: 1.25rem;
     line-height: 36px;
+    font-style: italic;
 
     /* or 180% */
     text-align: center;
