--- a/views/landingPage/section7/section7.module.css
+++ b/views/landingPage/section7/section7.module.css
@@ -24,6 +24,14 @@
     animation-iteration-count: infinite;
 }
 
+.title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.875rem;
+    line-height: 54px;
+}
+
 @keyframes marker {
     0% {transform: translate(0, 0);}
     50% {transform: translate(0, -10px);}
@@ -31,6 +39,12 @@
 }
 
 @media (max-width: 480px) {
+
+    .title{
+        font-size: 1.5rem;
+        margin-top: -60px !important;
+    }
+
     .container{
         display: none;
     }
@@ -39,7 +53,7 @@
         display: block;
     }
     .mapCon{
-        margin-top: -160px;
+        margin-top: -50px;
         width: 100vw;
         height: 47.77777777777778vw;
     }
