--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -25,7 +25,7 @@
 
 .active{
     opacity: 1;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .logoConMM{
@@ -36,7 +36,7 @@
 
 .mobMenu{
     position: fixed;
-    width: 150px;
+    width: 100vw;
     height: 100vh;
     top: 0;
     display: none;
@@ -45,7 +45,10 @@
     box-shadow: inset 0 1px 4px hsl(0deg 0% 100% / 25%);
     /* backdrop-filter: blur(15px); */
     z-index: 1000;
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(4px);
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
 }
 
 @media (max-width: 480px) {
@@ -56,7 +59,7 @@
     }
 
     .mobMenu{
-        display: block;
+        display: flex;
     }
 
     .menu{
@@ -64,5 +67,12 @@
     }
     .label{
         width: fit-content;
+        color: white;
+        font-size: 1.5rem;
+        opacity: 1;
+        text-align: center;
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
+    
 }
